# CSFContrast

./: Cargo.toml  README.org
src/: color_space.rs  csf.rs  fft.rs  grating.rs  gstreamer.rs  gui.rs  image_shader.rs  main.rs  perception_adapter.rs  system.rs
src/color_space/: comp.glsl  comp.glsl~
src/fft/: comp.glsl
src/grating/: frag.glsl
src/gstreamer/: context.rs  context.rs~  copy_frag.glsl  copy_frag.glsl~
src/perception_adapter/: comp.glsl  frag.glsl
