[package]
name = "csf_contrast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31"
cgmath = "0.18"
egui = "0.18.0"
egui_glium = "0.18.0"

[patch.crates-io]
glium = {git = "https://github.com/glium/glium.git", rev = "cacb970"}

